--- a/dev/style.css
+++ b/dev/style.css
@@ -100,6 +100,8 @@ body{
 .createdGoals {
 	color:white;
 	font-size:16px;
+	/*SYNK*/
+	overflow: scroll;
 }
 
 .userinput:focus{
@@ -316,11 +318,14 @@ h2{
 }
 
 .doneLink {
+	color:white;
 	float: right;
 	margin-right: 8vw;
 	font-size: 25px;
 	margin-top: 10%;
 	text-decoration: underline;
+	background-color:transparent;
+	border:none;
 }
 /*@media screen and (orientation:landscape){
 	.bgImg{
