--- a/dev/style.css
+++ b/dev/style.css
@@ -546,80 +546,108 @@ input.marginRight{
 
 .indexHeader{
 	background-color: rgb(33, 33, 33);
-	min-height: 60px;
-	max-height: 60px;
+	height: 10vh;
 	width: 100vw;
-	position: absolute;
-	display: inline-block;
+	position: fixed;
+	display: table;
 }
 
 .menuButton{
-	display: inline;
-	height: 30px;
-	width: 30px;
-	margin: 15px;
+	display: table-cell;
+	height: 5vh;
+	width: 5vh;
+	margin: 2vh;
 }
 
 .headerTitle{
-	position: absolute;
-	top: 0px;
-	left: 60px;
-	margin-top: 5px;
-	min-width: 80vw;
-	font-size: 36px;
+	font-size: 7vh;
 	font-family: "Open Sans";
 	font-weight: 300;
 	color: #55a244;
 	text-transform: uppercase;
 	text-align: center;
-}
-
-.Mina_mål {
-  font-size: 38px;
-  font-family: "Open Sans";
-  color: rgb(100, 187, 80);
-  text-transform: uppercase;
-  text-align: center;
-  position: absolute;
-  left: 64.491px;
-  top: 12.88px;
-  width: 164px;
-  height: 34px;
-  z-index: 52;
+	display: table-cell;
+	vertical-align: middle;
+	position: relative;
+	left: -8vw;
 }
 
 .container.offsetHeader{
-	padding-top: 60px;
+	padding-top: 10vh;
+	overflow: scroll;
+	background-color: rgb(33, 33, 33);
 }
 
 .goal{
 	width: 100vw;
-	height: 80px;
-	background-color: #55a244;
-	display: inline-block;
-	border-bottom: solid 1px rgb(33, 33, 33);
+	height: 15vh;
+	display: table;
+	/*border-bottom: solid 1px rgb(33, 33, 33);*/
+	font-family: "Oswald";
+	font-size: 3vh;
 }
 
 .pointCircle{
 	background-color: rgb(33, 33, 33);
-	border-radius: 25px;
-	height: 50px;
-	width: 50px;
-	margin-left: 15px;
-	margin-top: 10px;
-	float: left;
+	border-radius: 12vh;
+	height: 12vh;
+	width: 12vh;
+	margin: 1.5vh;
+
 }
 
 .points{
 	color: #ffffe8;
-	height: inherit;
-	width: inherit;
 	text-align: center;
-	padding-top: 15px;
+	line-height: 12vh;
+}
+
+.tableFix{
+	display: table-cell;
+	vertical-align: middle;
 }
 
 .description{
-	float: left;
+	display: table-cell;
+	line-height: 1.4;
 	width: 70vw;
+}
 
+.footer{
+	background-color: rgb(33, 33, 33);
+	position: fixed;
+	bottom: 0px;
+	height: 15vh;
+	width: 100vw;
+	display: table;
+}
+
+.tab{
+	border-top: solid 3px rgb(65, 65, 65);
+	width: 33vw;
+	display: table-cell;
+	text-align: center;
+	vertical-align: middle;
+}
+
+.myGoals{
+	background: url("img/goals.png");
+	background-size: 5vh auto;
+	background-repeat: no-repeat;
+	background-position: center;
+	border-top: solid 3px #64bb50;
+}
+
+.highscore{
+	background: url("img/rankings.png");
+	background-size: 5vh auto;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.stats{
+	background: url("img/stats.png");
+	background-size: 5vh auto;
+	background-repeat: no-repeat;
+	background-position: center;
 }
