--- a/dev/style.css
+++ b/dev/style.css
@@ -712,3 +712,14 @@ input.marginRight{
 	background-size: 8vh 8vh;
 	background-repeat: no-repeat;
 }
+
+/*.pieChart{
+	width: 80vw;
+	display: inline;
+}*/
+
+/*#myDailyStats{
+	width: 80vw; 
+	height: 80vh;
+}*/
+
