--- a/dev/style.css
+++ b/dev/style.css
@@ -713,13 +713,34 @@ input.marginRight{
 	background-repeat: no-repeat;
 }
 
-/*.pieChart{
-	width: 80vw;
-	display: inline;
-}*/
+.statsTitle{
+	font-family: "Oswald";
+	font-size: 3vh;
+	width: 50vw;
+	text-align: center;
+	position: relative;
+	bottom: -10vh;
+	z-index: 999;
+}
 
-/*#myDailyStats{
-	width: 80vw; 
-	height: 80vh;
-}*/
+.pieChart{
+	width: 50vw;
+	height: 65vh;
+	/*display: inline;*/
+}
+
+#myStats{
+	display: table;
+	overflow: hidden;
+}
+
+.dailyStats{
+	display: table-cell;
+	width: 50vw;
+}
+
+.totalStats{
+	width: 50vw;
+	display: table-cell;
+}
 
