--- a/dev/style.css
+++ b/dev/style.css
@@ -25,22 +25,59 @@ body{
 	background-image: url("img/loginbg.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
+	/*background-color:#212121;*/
 }
 
 .goalBg{
-	background-image: url("img/goalbg_wide.jpg");
-	background-size: cover;
-	background-position: center;
+	/*background-image: url("img/goalbg_wide.jpg");*/
+	/*background-size: cover;*/
+	/*background-position: center;*/
+	background-color:#212121;
 }
 
+.summaryBody {
+	height: 65vh;
+ 	overflow: scroll;
+
+}
 .summaryBg{
-	background-image: url("img/small_leaves.jpg");
+	/*background-image: url("img/small_leaves.jpg");*/
+	background-color:#212121;
 	min-height: 100vh;
-	background-size: cover;
-	background-repeat: no-repeat;
+	/*background-size: cover;*/
+	/*background-repeat: no-repeat;*/
 	background-position: 15% 20vh;
 }
 
+.customDivider{
+	width:80%;
+	border: 1px solid #ffffe8;
+}
+
+.center.instruction{
+	padding-left:5vw;
+	padding-right:5vw;
+	font-family:Roboto;
+	font-size:12pt;
+	color: #ffffe8;
+	padding-top:3vh;
+}
+
+#bottomSummaryLinks {
+  background-color: rgba(0,0,0,0.5);
+  /*background-color:#212121;*/
+  position: absolute;
+  bottom: 0px;
+  height: 15vh;
+  width: 100vw;
+  display: table;
+}
+
+.summaryHeader{
+	font-weight:bold;
+	font-family:Roboto, helvetica, sans serif;
+	font-size:14pt;
+}
 .container.fullWidth{
 	padding: 0px;
 	margin-right: 0px;
