--- a/dev/style.css
+++ b/dev/style.css
@@ -323,10 +323,11 @@ h3{
 
 #chooseGoalsHeader{
 	font-weight: 500;
+	font-size: 6vmax;
 }
 
 #chooseGoalsSub{
-	font-size: 24px;
+	font-size: 4vmax;
 	font-weight: 300;
 }
 
@@ -384,6 +385,25 @@ h3{
 	padding: 2px;
 	padding-top: 5px;
 	text-align: center;
+	font-size: 4vmin;
+}
+
+@media all and (min-width: 960px) {
+.goalButton{
+    font-size: 3vh;
+  }
+}
+
+@media all and (max-width: 959px) and (min-width: 600px) {
+.goalButton{
+    font-size: 3vh;
+  }
+}
+
+@media all and (max-width: 599px) and (min-width: 50px) {
+.goalButton{
+    font-size: 4vw;
+  }
 }
 
 .fixGoalBgGray{
@@ -461,29 +481,6 @@ h3{
 	background-color:transparent;
 	
 }
-/*@media screen and (orientation:landscape){
-	.bgImg{
-		display: none;
-	}
-	.turnBack{
-		display:;
-	}
-	#turnIt{
-	  vertical-align: middle;
-	  text-align: center;
-	  line-height: 95vh;
-	}
-}
-
-@media screen and (orientation:portrait){
-	.bgImg{
-		display:;
-	}
-   .turnBack
-   {
-      display: none;
-   }
-}*/
 
 *::-webkit-input-placeholder {
     color: rgba(255,255,232,0.8);
@@ -513,7 +510,7 @@ h3{
 	}
 
 	.goalInstructions{
-		font-size: 22px;
+		font-size: 4vh;
 	}
 
 	.row{
@@ -522,12 +519,22 @@ h3{
 
 }
 
-@media screen and (max-width: 319px){
+@media screen and (min-width: 700px){
 	.goalInstructions{
-		font-size: 20px;
+		font-size: 5vh;
 	}
+}
 
+@media screen and (max-width: 343px){
+	.goalInstructions{
+		font-size: 5.5vw;
+	}
+}
 
+@media screen and (max-width: 900px) and (max-height: 400px){
+	.goalInstructions{
+		font-size: 5vh;
+	}
 }
 
 .topHalfWrapper{
@@ -570,10 +577,12 @@ h3{
 }
 
 .toOwnGoals{
-	position: absolute;
+	position: initial;
 	bottom: 30px;
 	padding-top: 0;
 	padding-bottom: 0; 
+	margin-left: 3vw;
+	margin-top: 3vh;
 	width: 40vw;
 	height: 45px;
 	left: 5vw;
