--- a/dev/style.css
+++ b/dev/style.css
@@ -22,10 +22,15 @@ body{
 }
 
 .bgImg{
-	background-image: url("img/loginbg.jpg");
+	background-image: url("img/loginbg_wide.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
+	background-position: center;
 	/*background-color:#212121;*/
+}
+
+#loginScreen{
+
 }
 
 .goalBg{
@@ -86,17 +91,15 @@ body{
 }
 
 .logo{
-	padding-left: 20%;
-	padding-right: 20%;
 	height: 30vh;
 }
 
 .logoHolder{
-	padding-top: 5%;
+	padding-top: 10vh;
 }
 
 .loginForm{
-	padding-top: 8%;
+	padding-top: 5vh;
 }
 
 .newGoalForm{
@@ -106,20 +109,23 @@ body{
 
 .userinput{
 	font-family: 'Roboto', sans-serif;
-	font-size: 14pt;
+	font-size: 3vh;
 	text-align: center;
-	margin-top: 7%;
+	margin-top: 7vh;
 	color: #ffffe8;
-	width: 60%;
-	height: 8%;
-	padding: 8%;
-	padding-top: 2%;
-	padding-bottom: 2%;
-	border-radius: 50px;
+	width: 60vw;
+	height: 8vh;
+	padding: 3vh;
+	padding-top: 2vh;
+	padding-bottom: 2vh;
+	border-radius: 8vh;
 	background-color: rgba(0,0,0,0);
-	border: #ffffe8 solid 2px;
+	border: #ffffe8 solid 0.5vh;
 }
 
+#pw{
+	margin-top: 4vh;
+}
 
 .newGoal{
 	width: 90%;
@@ -187,13 +193,14 @@ body{
 	font-size: 1.4em;
 	color: #ffffe8;
 	text-align: center;
-	border-radius: 50px;
+	border-radius: 10vh;
 	vertical-align: middle;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	padding-left: 30px;
-	padding-right: 30px;
-	height: 8%;
+	padding: 1.5vh;
+	padding-left: 3vh;
+	padding-right: 3vh;
+	height: 10vh;
+	width: 60vw;
+	margin: 0;
 }
 
 .bottomLink:hover{
@@ -206,25 +213,18 @@ body{
 	border: none;
 }
 
-/*.loginRegister {
-	background-color:transparent;
-	color:white;
-	border-radius:30px;
-	width:100%;
-	height:8%;
-	text-align: center;
-	min-width: 150px;
-
-}*/
-
 a:active, a:visited, a:link {
     color: #ffffe8;
     text-decoration: none;
 }
 
 .bottomBar{
-	margin-top: 20%;
+	margin-top: 10vh;
+	margin-left: 20vw;
+	padding-left: 0;
+	padding-right: 0;
 	bottom: 15px;
+	font-size: 3vh;
 }
 
 .turnBack{
@@ -687,7 +687,7 @@ input.marginRight{
 
 .footer{
 	background-color: rgb(33, 33, 33);
-	position: absolute;
+	position: fixed;
 	bottom: 0px;
 	height: 15vh;
 	width: 100vw;
@@ -891,4 +891,9 @@ li{
 	margin: 0;
 	padding: 0;
 	margin-right: 5vmin;
+}
+
+#myTasks{
+	height: 75vh;
+	overflow: scroll;
 }
