--- a/dev/style.css
+++ b/dev/style.css
@@ -794,7 +794,7 @@ input.marginRight{
 
 .pieChart{
 	width: 50vw;
-	height: 65vh;
+	height: 50vh;
 	/*display: inline;*/
 }
 
@@ -895,4 +895,38 @@ li{
 #myTasks{
 	height: 75vh;
 	overflow: scroll;
+}
+
+#textStats{
+	width: 100%;
+	color: #ffffe8;
+}
+
+#leftStat{
+	float: left;
+	width: 100%;
+	text-align: center;
+	bottom: 6vh;
+	padding-bottom: 1.5vh;
+}
+
+#middleStat{
+	width: 100%;
+	float: left;
+	text-align: center;
+	bottom: 6vh;
+	padding-bottom: 1.5vh;
+
+}
+
+#rightStat{
+	float: right;
+	width: 100%;
+	text-align: center;
+	bottom: 6vh;
+	padding-bottom: 1.5vh;
+}
+
+.smaller{
+	font-size: 2.5vh;
 }
